Integrate remote_control functionality into GUI

--- a/remote_control/templates/index.html
+++ b/remote_control/templates/index.html
@@ -10,7 +10,7 @@
   </body>
   <!--<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>-->
   <script type="text/javascript">
-    const KEY = prompt("Key:");
+    const KEY = 100;
 
     const img = document.querySelector("img");
 
